Fix h1 layout - overlapping with section

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,6 +8,7 @@ body {
   background-color: var(--color-darkblue);
   color: var(--color-light);
   margin: 0;
+  padding: 0;
   display: grid;
   grid-template-rows: 60px auto 60px;
   height: 100vh;
@@ -17,6 +18,7 @@ h1 {
   text-align: center;
   border: 1px solid var(--color-red);
   margin: 0;
-  padding: 1.25rem;
+  padding: 1rem;
   text-transform: uppercase;
+  align-self: center;
 }
