--- a/styles/components/card.css
+++ b/styles/components/card.css
@@ -2,7 +2,7 @@
 
 .card {
   border: 1px solid var(--color-red);
-  padding: 0.5rem;
+  margin: 0.5rem;
 }
 
 .card__question {
