--- a/styles/components/questionArea.css
+++ b/styles/components/questionArea.css
@@ -6,6 +6,6 @@
 
 .questions {
   width: 90%;
-  margin: 0 auto;
+  margin: 0.5rem auto 0;
   overflow-y: auto;
 }
